@@ -1,5 +1,4 @@
 
-
   number of times fired                                            20
 -- @@stderr --
 dtrace: script 'test/dt_test/aggcount.d' matched 1 probe
