@@ -1,7 +1,6 @@
                    FUNCTION:NAME
                           :ERROR Hit an error!
 
-
 -- @@stderr --
 dtrace: script 'test/dtrace/error.d' matched 2 probes
 dtrace: error on enabled probe ID 1 (ID 1: dtrace:::BEGIN): invalid address ({ptr}) in action #1 at DIF offset 16
