@@ -1,7 +1,6 @@
                    FUNCTION:NAME
                           :BEGIN   Harding                            Hoover                             Nixon                              Bush                             
 
-
 -- @@stderr --
 dtrace: script 'test/unittest/drops/drp.DTRACEDROP_PRINCIPAL.d' matched 2 probes
 dtrace: [DTRACEDROP_PRINCIPAL] 1 drop on CPU
